--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-pdf-viewer/core": "3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "@react-pdf-viewer/full-screen": "^3.12.0",
+    "@react-pdf-viewer/search": "^3.12.0",
     "@tailwindcss/vite": "^4.0.9",
     "clsx": "^2.1.1",
     "pdfjs-dist": "3.4.120",
