--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-pdf-viewer/search": "^3.12.0",
     "@tailwindcss/vite": "^4.0.9",
     "clsx": "^2.1.1",
+    "lodash.debounce": "^4.0.8",
     "pdfjs-dist": "3.4.120",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
